# my-axum

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.agents/skills/bug/: SKILL.md
.agents/skills/feature/: SKILL.md
.agents/skills/performance/: SKILL.md
.agents/skills/refactor/: SKILL.md
.agents/skills/test/: SKILL.md
.github/workflows/: build.yaml  ci.yaml
benchmark/: index.js
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251108_000002_add_refresh_token_table.rs  m20251130_000003_add_password_reset_token_table.rs  m20260412_000004_add_user_role.rs
migration/tests/: test_migrator.rs
pkg/: Cargo.toml
pkg/src/: cors.rs  jwt.rs  password.rs  smtp.rs  url.rs
pkg/src/broadcast/: websocket.rs
pkg/src/broadcast/forwarder/: kafka_forwarder.rs  mod.rs  rabbitmq_forwarder.rs  redis_forwarder.rs
pkg/src/cache/: task_cache.rs
pkg/src/messaging/consumer/: kafka_consumer.rs  mod.rs  rabbitmq_consumer.rs  redis_consumer.rs  task_queue.rs
pkg/src/messaging/producer/: kafka_producer.rs  mod.rs  rabbitmq_producer.rs  redis_producer.rs
pkg/src/messaging/task/: mod.rs  task_event.rs
pkg/tests/: test_smtp.rs
scripts/: commit-amend.sh  db-wait.sh
src/: lib.rs  main.rs
src/assistant/: mod.rs
src/assistant/api/: assistant_api.rs  mod.rs
src/assistant/dto/: assistant_dto.rs  mod.rs
src/assistant/service/: assistant_service.rs  mod.rs
src/common/: mod.rs
src/common/api/: mcp_api.rs  mod.rs  runbook_api.rs  task_ws.rs
src/common/dto/: mcp_dto.rs  mod.rs
src/common/use_case/: mod.rs
src/common/util/: mod.rs
src/config/: app.rs  cron.rs  mod.rs  setting.rs  shutdown.rs  telemetry.rs
src/config/cmd/: mod.rs  seed.rs  worker.rs
src/core/: context.rs  mod.rs
src/core/api/: mod.rs  openapi.rs  route.rs
src/core/async/: cron.rs  mod.rs  task.rs  worker.rs
src/core/db/: connection.rs  mod.rs  ordering.rs  pagination.rs  uow.rs
src/core/dto/: error_dto.rs  mod.rs  response_dto.rs  runbook_dto.rs  util.rs
src/core/layer/: auth_layer.rs  cors_layer.rs  lang_layer.rs  mod.rs  page_size_limit_layer.rs  trace_layer.rs  transaction_layer.rs
src/core/runbook/: delete_refresh_tokens_by_email_use_case.rs  mod.rs  seed_use_case.rs
src/core/task/: mod.rs  task_handler.rs  task_type.rs
src/core/template/: engine.rs
src/core/translation/: language.rs
src/pkg/: cors.rs  jwt.rs  mod.rs  password.rs  smtp.rs  url.rs
src/pkg/broadcast/: mod.rs  websocket.rs
src/pkg/cache/: mod.rs  task_cache.rs
src/pkg/messaging/: mod.rs
src/user/: mod.rs
src/user/api/: auth_api.rs  mod.rs  user_api.rs  user_ws.rs
src/user/dto/: auth_dto.rs  avatar_dto.rs  mod.rs  user_dto.rs
src/user/entity/: mod.rs  password_reset_token.rs  prelude.rs  refresh_token.rs  sea_orm_active_enums.rs  user.rs
src/user/repository/: mod.rs  password_reset_repository.rs  refresh_token_repository.rs  user_repository.rs
src/user/service/: auth_service.rs  user_service.rs
src/user/task/: auth_task.rs  mod.rs  user_task.rs
tests/: mod.rs
tests/assistant/: mod.rs
tests/assistant/api/: mod.rs  test_assistant_api.rs
tests/assistant/service/: mod.rs  test_assistant_service.rs
tests/assistant/use_case/: mod.rs  test_chat_use_case.rs
tests/common/api/: mod.rs  test_mcp_api.rs  test_runbook_api.rs  test_task_api.rs
tests/config/: mod.rs  test_app.rs  test_setting.rs  test_telemetry.rs
tests/config/cmd/: mod.rs  test_runbook.rs  test_seed.rs
tests/core/: mod.rs  test_context.rs
tests/core/api/: mod.rs  test_openapi.rs  test_route.rs
tests/core/async/: test_task.rs
tests/core/db/: mod.rs  test_ordering.rs  test_pagination.rs  test_uow.rs
tests/core/dto/: mod.rs  test_error_dto.rs  test_order_by_dto.rs  test_request_dto.rs  test_response_dto.rs  test_util.rs
tests/core/layer/: mod.rs  test_cors_layer.rs  test_lang_layer.rs  test_trace_layer.rs  test_transaction_layer.rs
tests/core/runbook/: mod.rs  test_runbook.rs  test_seed.rs
tests/core/task/: mod.rs  test_task.rs  test_task_handler.rs
tests/core/template/: mod.rs  test_engine.rs
tests/core/translation/: mod.rs  test_language.rs
tests/pkg/: mod.rs  test_cors.rs  test_jwt.rs  test_password.rs  test_smtp.rs  test_url.rs
tests/setup/: app.rs  fixture.rs  mod.rs
tests/user/: mod.rs
tests/user/api/: mod.rs  test_auth_api.rs  test_user_api.rs  test_user_ws.rs
tests/user/dto/: mod.rs  test_avatar_dto.rs  test_user_dto.rs
tests/user/repository/: mod.rs  test_password_reset_repository.rs  test_refresh_token_repository.rs  test_user_repository.rs
tests/user/service/: mod.rs  test_auth_service.rs  test_user_service.rs
tests/user/task/: mod.rs  (+2 more)
(+80 files in other folders)
