[package]
name = "my-axum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "runbook"
path = "src/config/cmd/bin/runbook.rs"

[[bin]]
name = "worker"
path = "src/config/cmd/bin/worker.rs"

[workspace]
members = [
    "migration",
    "pkg",
]

[dependencies]
axum = { version = "0.8.9", features = ["http2", "ws"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock", "with-json" ] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
http = "1.4.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.13.3", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4"] }
regex = "1.12.3"
rand = "0.10.1"
tracing = "0.1.44"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
tera = "1.20.1"
rust-i18n = "4.0.0"
strum = { version = "0.28.0", features = ["derive"] }
pkg = { path = "pkg", package = "pkg" }

[dev-dependencies]
tokio-tungstenite = "0.29.0"
