[package]
name = "my-axum"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "migration",
]

[dependencies]
axum = { version = "0.8.8", features = ["http2", "ws"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock", "with-json" ] }
redis = { version = "1.0.2", features = ["tokio-comp", "aio"] }
lapin = "3.7.2"
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
anyhow = "1.0.100"
http = "1.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
uuid = { version = "1.19.0", features = ["v4"] }
regex = "1.12.2"
rand = "0.9.2"
tracing = "0.1.44"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tera = "1.20.1"
rust-i18n = "3.1.5"
strum = { version = "0.27.2", features = ["derive"] }

[[bin]]
name = "seed"
path = "bin/seed.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[dev-dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
tokio-tungstenite = "0.28.0"
