[package]
name = "migration"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
my-axum = { path = ".." }
tokio = { version = "1.48", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc"
features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
]
