[package]
name = "pkg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "ws"] }
tokio = { version = "1.51.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
redis = { version = "1.2.0", features = ["tokio-comp", "aio"] }
lapin = "4.4.0"
rdkafka = { version = "0.39.0", features = ["tokio", "cmake-build"] }
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
tracing = "0.1.44"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
lettre = { version = "0.11.20", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }

[dev-dependencies]
tokio = { version = "1.51.0", features = ["full"] }
